--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
   <br>
   <center>
   <table id="table" border = '1'>
-	<thread>
+	<thead>
   <tr>
 	<th>Entry ID</th>
-    <th>Date of Travel</th>
+	<th>Travel Method</th>
     <th>Origin</th>
     <th>Destination</th>
-	<th>Travel Method</th>
+	<th>Description</th>
+	<th>Date of Travel</th>
 	<th>Distance (km)</th>
-	<th> Return Journey</th>
 	<th>CO<sub>2</sub>eq (kg)</th>
 	<th>Remove Entry</th>
 
   </tr>
-  </thread>
+	</thead>
   
   <tbody  id = 'tbody'>
   </tbody>
