--- a/driving.html
+++ b/driving.html
@@ -6,7 +6,6 @@
 <meta http-equiv ="X-UA-Compatible" content="ie=edge">
 <title>Travel Carbon Emissions Calculator</title>
 <link rel="stylesheet" type ="text/css" href = "css/style.css"/>
-
 <script src="js/driving.js"></script>
 <script type = 'module' src = 'js/driving_auth.js'></script>
 </head>
@@ -34,31 +33,30 @@
     
 <div>
 	<center>
-		<div>
+		<div id='inRows' class = "row">
 		<input type="text" id="from" placeholder = "Origin", size='50'/>
-		</div>
-		<div>
-		<input type="text" id="wp" placeholder = "Waypoint", size='50'/>
-		</div>
-		
-		<div>
 		<input type="text" id="to" placeholder = "Destination", size='50'/>
-
-		</div>	
-	
-	
+		<div class = "column">
+		</div>
+		</div>
+		<button class="btn" onclick="addWaypointfeild(); return false">Add Waypoint</button>
 <br>
-	
+<br>
+	<b>Description: </b><input type ="text" id="description" size='50'>
 	<b>Date of Travel: </b><input type='date' id='date'>
 	<b>Number of Travelers: </b><input type="number" min="1" id="traveler_num"/>
-	<b>Role: </b><select id = 'role'><option value = "PI">PI</option> 
+	<b>Role: </b><select id = 'role'>
+						<option value = "PI">PI</option> 
 						 <option value = "Post-Doc">Post-Doc</option> 
 						 <option value = "PhD">PhD Student</option> 
 						 <option value = "Masters">Masters Student</option> 
 						 <option value = "Undergraduate">Undergraduate Student</option>
 						 <option value = "Other">Other</option> </select>
+
 				
-	<b>Fuel Type: </b><select id = 'fuel_type'><option value = "petrol">Petrol</option> 
+	<b>Fuel Type: </b><select id = 'fuel_type'>
+	
+	<option value = "petrol">Petrol</option> 
 							  <option value = "diesel">Diesel</option> 
 							  <option value = "hybrid">Hybrid</option> 
 							  <option value = "electric">Electric</option> </select>
@@ -71,7 +69,6 @@
 											<option title = "Unknown engine size" value = 3>Average</option> </select>
 	
 	
-	<b> Return Journey:</b><input type="checkbox" id="return_j">
 	</center>
 <br>
 </div>
@@ -85,12 +82,12 @@
 	
 	<i>Origin: <b><span id="inputted_origin"></span></b></i>
 	<i>, Destination: <b><span id="inputted_destination"></span></b></i>
+	<i>, Description: <b><span id="inputted_description"></span></b></i>
 	<i>, Date: <b><span id="inputted_date"></span></b></i>
-	<i>, Traveler Number: <b><span id="inputted_traveler_num"></span></b></i>
+	<i>, Number of Travelers: <b><span id="inputted_traveler_num"></span></b></i>
 	<i>, Role: <b><span id="inputted_role"></span></b></i>
 	<i>, Fuel Type: <b><span id="inputted_fuel"></span></b></i>
 	<i>, Car Size: <b><span id="inputted_size"></span></b></i>
-	<i>, Return Journey: <b><span id ="inputted_return"></span></b></i>
 	
   </div>
 
@@ -98,7 +95,7 @@
 <div id="estimated_emissions">
 <h3>Estimated Emissions</h3>
 	<div>
-	<i>One way distance: <b><span id="first_travel_dist"></span> + <span id = "second_travel_dist"></span> =  <span id = "total_dist"></span> km</b></i>
+	<i>Total Distance: <b><span id = "total_dist"></span></b></i>
 	</div>
 	<div>
 	<i>Estimated total kgs of CO2-eq emitted: <b><span id="est_co2_emm"></span></b></i>
@@ -122,7 +119,7 @@
 
 	<!-- Load the API key-->
     <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD05bky4dBxfyQlRaFVRrW-jAqs-x9gp9k&libraries=places&callback=initMap&v=weekly">	  
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4kvf_EGDfGG4JdHuJa6Gi023HZJ4Tl0A&libraries=places&callback=initMap&v=weekly">	  
 	</script>
   </body>
 </html>
