--- a/manual.html
+++ b/manual.html
@@ -43,13 +43,13 @@
 		</div>	
 		
 		<div>
-		<input type = "number" id = "emmissions" placeholder = "Total emissions CO2eq (kg)", style="width: 28.5em"/>
+		<input type = "number" min = "0" id = "emmissions" placeholder = "Total emissions CO2eq (kg)", style="width: 28.5em"/>
 		</div>
 		<div>
-		<input type = "number" id = "distance" placeholder = "Distance travelled (km)", style="width: 28.5em"/>
+		<input type = "number" min = "0" id = "distance" placeholder = "Distance travelled (km)", style="width: 28.5em"/>
 		</div>	
 <br>
-	
+	<b>Description: </b><input type ="text" id="description" size='50'>
 	<b>Date of Travel: </b><input type='date' id='date'>
 	<b>Role: </b><select id = 'role'><option value = "PI">PI</option> 
 						 <option value = "Post-Doc">Post-Doc</option> 
@@ -59,9 +59,9 @@
 						 <option value = "Other">Other</option> </select>
 						 
 	<b>Travel Method: </b><select id = 'method'>
-						<option value = "driving">Car</option> 
-						 <option value = "transit">Public Transport</option> 
-						 <option value = "air">Plane</option></select>
+						<option value = "DRIVING">Car</option> 
+						 <option value = "TRANSIT">Public Transport</option> 
+						 <option value = "AIR">Plane</option></select>
 	
 <br>
 
@@ -77,6 +77,7 @@
 	<i>, Destination: <b><span id="inputted_destination"></span></b></i>
 	<i>, CO2eq (kg): <b><span id = "inputted_emissions"></span></b></i>
 	<i>, Distance (km): <b><span id = "inputted_distance"></span></b></i>
+	<i>, Description: <b><span id = "inputted_description"></span></b></i>
 	<i>, Date: <b><span id="inputted_date"></span></b></i>
 	<i>, Role: <b><span id="inputted_role"></span></b></i>
 	<i>, Travel Method: <b><span id ="inputted_method"></span></b></i>
@@ -96,10 +97,12 @@ crsid = document.getElementById("crsid");
 role = document.getElementById("role");
 origin = document.getElementById("from");
 destination = document.getElementById("to");
+description = document.getElementById("description");
 emissions = document.getElementById("emmissions");
 distance = document.getElementById("distance");
 travel_mode = document.getElementById("method");
 // Add listeners
+description.addEventListener('change', info_changed)
 origin.addEventListener('change', info_changed);
 destination.addEventListener('change', info_changed);
 date.addEventListener('change', info_changed);
@@ -109,6 +112,7 @@ distance.addEventListener('change', info_changed);
 travel_mode.addEventListener('change', info_changed);
 
 function info_changed(){
+		document.getElementById('inputted_description').innerHTML = document.getElementById("description").value;
 		document.getElementById("inputted_origin").innerHTML = document.getElementById("from").value;
 		document.getElementById("inputted_destination").innerHTML = document.getElementById("to").value;
 		document.getElementById("inputted_date").innerHTML = document.getElementById("date").value;
